Remove sensitive information and paper documents
- 删除整个docs/paper文件夹（论文、图片、模板）
- 隐藏所有AI模型相关敏感信息
- 替换FIN-R1为通用AI Model引用
- 更新README，移除性能数据和敏感技术栈
- 项目现在只包含核心代码，适合公开展示

--- a/AlgoVoice-server-develop/module_10_ai_interaction/config/ai_interaction_config.yaml
+++ b/AlgoVoice-server-develop/module_10_ai_interaction/config/ai_interaction_config.yaml
@@ -1,6 +1,6 @@
-# Module 10 - AI交互模块配置文件
+﻿# Module 10 - AI交互模块配置文件
 
-# FIN-R1模型相关配置已移除，现在统一使用阿里云AI服务
+# AI Model模型相关配置已移除，现在统一使用阿里云AI服务
 
 # NLP处理器配置
 nlp:
@@ -91,7 +91,7 @@ logging:
   level: "INFO"  # DEBUG/INFO/WARNING/ERROR
   log_intent_classification: true
   log_parameter_mapping: true
-  log_fin_r1_calls: true
+  log_AI_Model_calls: true
   log_session_events: true
 
 # 性能配置
