Clean up redundant files in develop folder
- 删除所有冗余的txt说明文件
- 删除多余的bat启动器（保留启动.bat）
- 删除README.txt（保留README.md）
- 删除test_api.html和临时脚本
- 删除旧的FinLoom-server-develop重复文件夹
- 更新.gitignore排除论文文档（本地保留）
- 项目结构更加简洁清爽

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,13 @@ conversation_history/conversations.db
 # 敏感配置文件（如果包含API密钥等）
 # config/*_config.yaml
 
+# 大作业报告和论文文档（本地保留，不上传）
+金融计量学*.pdf
+金融计量学*.tex
+references.bib
+figures/
+template/
+*.png
+Github仓库设置指南.md
+项目清理计划.md
+
